src/objects/AD_Group__c.object
<CustomObject>
    <fields>
        <fullName>AD_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_User__c</fullName>
        <label>AD User</label>
        <referenceTo>AD_User__c</referenceTo>
        <relationshipLabel>AD Groups</relationshipLabel>
        <relationshipName>AD_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_AD_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent AD Group</label>
        <referenceTo>AD_Group__c</referenceTo>
        <relationshipLabel>AD Groups</relationshipLabel>
        <relationshipName>AD_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AD Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AD_User__c</columns>
        <columns>AD_Group_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AG-{00000}</displayFormat>
        <label>AD Groups Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AD Groups</pluralLabel>
    <recordTypes>
        <fullName>ADGroupMain</fullName>
        <active>true</active>
        <label>ADGroupMain</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>